// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountDown CountDown base demo works fine 1`] = `
<base>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       时分秒 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带毫秒 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss:SSS"
        millisecond="{{true}}"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带方形底 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        content="default"
        theme="square"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带圆形底 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        content="default"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带单位 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        content="default"
        splitWithUnit="{{true}}"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       无底色带单位 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        content="default"
        splitWithUnit="{{true}}"
        tClassCount="external-count"
        tClassSplit="external-split"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
</base>
`;

exports[`CountDown CountDown size demo works fine 1`] = `
<size>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       时分秒 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        size="small"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        size="large"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带毫秒 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss:SSS"
        millisecond="{{true}}"
        size="small"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss:SSS"
        millisecond="{{true}}"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss:SSS"
        millisecond="{{true}}"
        size="large"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带方形底 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="small"
        theme="square"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        theme="square"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="large"
        theme="square"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带圆形底 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="small"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="large"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
  <wx-view
    class="demo-count-down"
  >
    <wx-text
      class="demo-count-down-desc"
    >
       带单位 
    </wx-text>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="small"
        splitWithUnit="{{true}}"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        splitWithUnit="{{true}}"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
    <wx-view
      class="demo-count-down-content"
    >
      <t-count-down
        format="HH:mm:ss"
        size="large"
        splitWithUnit="{{true}}"
        theme="round"
        time="{{5760000}}"
      />
    </wx-view>
  </wx-view>
</size>
`;
